--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@umijs/route-utils": "^1.0.36",
     "antd": "4.21.0",
     "antd-img-crop": "^4.2.4",
-    "apexcharts": "^3.41.1",
+    "apexcharts": "^4.5.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "fs-extra": "^11.2.0",
@@ -73,13 +73,13 @@
     "moment-timezone": "^0.5.33",
     "oidc-client-ts": "^2.2.5",
     "path": "^0.12.7",
-    "react": "^17.0.0",
-    "react-apexcharts": "^1.4.1",
+    "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-big-calendar": "^0.35.0",
     "react-countup": "^6.4.2",
     "react-dev-inspector": "^1.1.1",
-    "react-dom": "^17.0.0",
+    "react-dom": "^19.0.0",
     "react-helmet-async": "^1.0.4",
     "react-highlight-words": "^0.18.0",
     "react-image-file-resizer": "^0.4.8",
@@ -99,6 +99,7 @@
     "tinymce": "^5.10.0",
     "umi": "~3.5.0",
     "umi-serve": "~1.9.10",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
